Utilisation des one-off dyno pour initialiser les collections de la base MongoDB plutôt que des requêtes POST
